--- a/docs/resource/游戏资源.md
+++ b/docs/resource/游戏资源.md
@@ -18,7 +18,17 @@ Remember11 目前共发售了五个平台的版本。
 
 如果您需要模拟器资源，或者下载了但不会使用它，可以去 [PPSSPP 官网][] 或者[百度 PPSSPP 吧][]寻找解决方法，本站不再赘述。
 
-## 简体中文版
+## 中文版
+
+:::tip
+本站所提供的全部中文版游戏资源均为 **简体中文** 版。
+
+繁体中文版 Remember11 目前仅有台湾`光谱资讯`于香港、台湾地区代理并发售的 `Windows` 版这一种版本，且仅发行过实体光盘版，没有数字版。
+
+由于此版本的`DRM`要求间歇性的联网验证，加之迟迟没有得到破解，目前它已经随着光盘的停产而走入了历史。
+
+所以，如果您是来自台湾、香港地区的繁体中文使用者，请考虑使用简体中文版游玩，或者去购买市面上仍在流通的 PC 光盘版。不过，考虑到`光谱资讯`已经事实上停止此产品的销售许久，不保证此版本游戏的`DRM`验证服务器仍能正常工作。
+:::
 
 ### Windows（官方中文）
 
@@ -49,7 +59,6 @@ Remember11 目前共发售了五个平台的版本。
 
 若想支持汉化组，可访问[汉化组主页](https://fantrans.remember11.com/)，查看本组其他作品。
 :::
-
 ## 英文版（民间英文）
 
 ### Windows
@@ -62,7 +71,7 @@ Remember11 目前共发售了五个平台的版本。
 
 [Github][]
 
-## 日语版
+## 日文版
 
 ### Windows
 
@@ -73,14 +82,6 @@ Remember11 目前共发售了五个平台的版本。
 ### PS2
 
 [PS2-百度网盘下载（提取码：re11）][]
-
-## 为什么没有繁体中文版？
-
-繁体中文版 Remember11 目前仅有台湾`光谱资讯`于香港、台湾地区代理并发售的 `Windows` 这一种版本，且其仅发行过实体光盘版，没有数字版。
-
-由于此版本迟迟得不到破解，目前它已经随着光盘的停产而走入了历史。
-
-所以，如果您是来自台湾、香港地区的繁体中文使用者，请考虑使用简体中文版游玩，或者去购买市面上仍在流通的 PC 光盘版。不过，考虑到`光谱资讯`已经事实上停止此产品的销售许久，不保证此版本游戏的`DRM`验证服务器仍能正常工作。
 
 [正版购买（方块游戏平台）]: https://store.cubejoy.com/html/en/store/goodsdetail/detail195.html
 [PPSSPP 官网]: https://www.ppsspp.org/
