--- a/docs/posts/转移现象/犬伏景子和凉荫穗鸟.md
+++ b/docs/posts/转移现象/犬伏景子和凉荫穗鸟.md
@@ -14,7 +14,7 @@ category:
 
 # 犬伏景子和凉荫穗鸟
 
-在[第三人格和第三地点](第三人格和第三地点)中，我们确认了第三人格 α 是内海未出生的双胞胎之一，但这并不是唯一奇怪的人格。让我们看看另一个神秘人，犬伏景子，或者她喜欢的那个自称，“凉荫穗鸟”。
+在[第三人格和第三地点](第三人格和第三地点)中，我们确认了第三人格 α 是内海未出生的双胞胎之一，但这并不是游戏中唯一存在谜团的角色。让我们看看另一个神秘人，犬伏景子，或者她喜欢的那个自称，“凉荫穗鸟”。
 
 ## 穗鸟是 DID 人格吗
 
@@ -28,7 +28,7 @@ category:
 
 ## 转移
 
-揭开这一神秘谜团的关键在于，悟只看到了健谈的人格，而心只看到了沉默的人格。犬伏的人格交流与主角完全同步，只有当犬伏和穗鸟也经历了这种交换现象时，才能解释这个现象。悟曾经提到过这个问题，他说：
+揭开这一神秘谜团的关键在于，悟只看到了健谈的人格，而心只看到了沉默的人格。犬伏的人格转换与主角完全同步，唯一可能的解释只有犬伏和穗鸟也经历了这种交换现象。悟曾经提到过这个问题，他说：
 
 > 恐怕穗鸟也像我、心与第三人格一样，被持续卷入了转移现象
 
@@ -36,13 +36,15 @@ category:
 
 > “红色的房间”“温暖”“看见”“红光”“房间”
 
-一个温暖的红色房间，在 SPHIA 和小屋里是不存在的。这个描述听起来很像对内海子宫的描述。请记住，交换现象发生在 3 个具有 3 个人格的地点中。因为内海怀的是双胞胎，所以当主角和另一个婴儿交换时，穗鸟和犬伏很有可能在与其中另一个婴儿在发生着交换。
+温暖的红色房间并不存在于 SPHIA 和小屋中。这个描述只有可能是对内海子宫内部的描述。请记住，人格转移现象是在 3 个地点和 3 个人格之间发生的。
 
-在这之后，她又描述了这些东西：
+因为内海怀的是双胞胎，所以当主角和一个婴儿发生人格交换时，穗鸟和犬伏很有可能在与另一个婴儿在发生着交换。
+
+此后，她又进行了这些描述：
 
 > “寒冷”“黑暗”“关在里面”“孤单一人”“红色的房间”“进入”
 
-真正的穗鸟的尸体就在小屋外，几乎被雪掩埋了。如果穗鸟在雪地里还留存有部分意识，那么把她所描述的寒冷、黑暗、孤独这几个词汇套入进去似乎很合适。我们有理由相信她还活着，因为在第七天，她还存有足够的力气移动手指。
+真正的穗鸟的身体就在小屋外。如果穗鸟在雪地里还留存有部分意识，那么把她所描述的寒冷、黑暗、孤独这几个词汇套入进去似乎很合适。我们有理由相信她还活着，因为在第七天，她还存有足够的力气移动手指。
 
 这就建立了我们的第二组转移，包括在风雪中游荡的沉默的穗鸟，SPHIA 的无法预测的犬伏和在子宫里睡觉的双胞胎。为了方便起见，我们将另一个婴儿称为`Ω`而不是`α`。这也呼应了序章的一个章节，名为`既是 α 也是 Ω`。
 
@@ -68,17 +70,17 @@ category:
 
 ## 发狂
 
-在 SPHIA 期间，穗鸟有几次突然发狂的现象，而这往往发生在她的有镜子的房间里。想象一下，你在经历了一次飞机失事后，从一座陌生的建筑里醒来，突然没有了说话的能力，胡乱地做着关于一间温暖的红色房间和一间冰冷黑暗的房间的梦，又一下子发现镜中映出的脸并不是你自己，此时，你会作何感想呢？由此看来，她会发狂也不足为奇了。而当心把她按在地上，以为凶残的人格正在显露出来时，情况就更糟了。
+在 SPHIA 期间，穗鸟有几次突然发狂的现象，而这往往发生在她的房间里，而这个房间里有镜子。想象一下，你在经历了一次飞机失事后，从一座陌生的建筑里醒来，突然没有了说话的能力，胡乱地做着关于一间温暖的红色房间和一间冰冷黑暗的房间的梦，又一下子发现镜中映出的脸并不是你自己，此时，你会作何感想呢？而当心把她按在地上，以为凶残的人格正在显露时，情况就变得更糟了。
 
 后来，她又发现自己拿着刀在血泊中醒来。她挥刀砍向悠尼并不是因为她很暴力，而是因为她此时惊慌失措，而悠尼又正好走到了她身前。
 
-你可能要问了，但她第三天也发了一次脾气，而这次她并没有看着镜子呀？请想想，那时候暴风雪已经开始减弱了，这也就意味着，她终于可以意识到，自己真正的身体到底发生了什么。
+在第三天，她也发了一次脾气，而这次她并没有看着镜子。此时，暴风雪已经开始减弱了，这也就意味着，她终于可以意识到，自己真正的身体究竟发生了什么。
 
 ## 未能存活的阴影
 
 不幸的是，她最终死在了自己的身体里。她的尸体被救援队找到，后来被列为了坠机事故的受害者之一。与悟发现她的身体时所以为的相反，穗鸟当时并没有在她的身体中死亡，因为她的身体实际上存活到了第 7 天。在尾声中，犬伏的身体还是一如既往的健谈。
 
-顺便一提，转移现象可以帮助她活到第七天。每次转移时，穗鸟的身体会在第三地点和青鹭岛上各停留 33 分钟，这两个地方都很有可能可能比朱仓岳上的温度高。
+转移现象帮助了她。每次转移时，穗鸟的身体会在第三地点和青鹭岛上各停留 33 分钟，这两个地方都很有可能可能比朱仓岳上的温度高。
 
 ## 天生的麻烦鬼
 
@@ -86,17 +88,19 @@ category:
 
 这可能是因为穗鸟第一次来到 SPHIA 时遇到了悠尼，此时他正蜷缩在自己的房间里。真正的穗鸟一定是为他写了她的名字，因为他后来把她称为穗鸟。回到自己的身体后，犬伏发现一个陌生的男孩用一个奇怪的名字叫她。
 
-如果她真的患有 DID，她可能已经习惯了自己的其他人格做一些奇怪的事情，并下意识地顺着它们。[此外，在游戏的广播剧中揭露了一种令人毛骨悚然的可能性:](https://www.bilibili.com/video/BV16D4y1k7PP)她或许根本不是什么 did 患者，精神分析是伪造的，杀人事件也是她自己亲手造成的，一切都只是为了好玩。她的个人简介 `Tips105` 中也说道，她喜欢“吸引别人的注意”“玩弄身边的人”；并且“是团体的负担，麻烦制造者”。我们在整个故事中都看到了这一点。
+如果她真的患有 DID，她可能已经习惯了自己的其他人格做一些奇怪的事情，并下意识地顺着它们。
+
+[此外，在游戏的广播剧中提出了一种假说：](https://www.bilibili.com/video/BV16D4y1k7PP)她可能并非是DID患者，精神分析是伪造的，杀人事件也是她自己亲手造成的，一切都只是为了好玩。她的个人简介 `Tips105` 中也记载，她喜欢“吸引别人的注意”“玩弄身边的人”；并且“是团体的负担，麻烦制造者”。整个游戏都印证了这一点。
 
 ## 象征
 
 ### 章节标题
 
-让我们看看在穗鸟身体出现的时候，章节标题所使用的象征性的语言。这两个章节的标题分别是：`Another Shadow（另一个影子）`和`未能存活的阴影`。因为犬伏的原型是`Shadow（影子）`，所以穗鸟被称为“另一个影子”意味着她的人格同犬伏景子的人格之间的关系。然而，最终那个影子在雪山里死去了。
+让我们看看在穗鸟身体出现的时候，章节标题所使用的象征性的语言。这两个章节的标题分别是：`Another Shadow（另一个影子）`和`未能存活的阴影`。因为犬伏的原型是`Shadow（影子）`，所以穗鸟被称为“另一个影子”，表明了她的人格同犬伏景子的人格之间的关系。然而，最终那个影子在雪山中死去了。
 
-她出现的最后一幕叫做`Hekate(赫卡特)`。赫卡特是古希腊神话中的女神，常被描绘成三位一体，即三种形式，一种本质。这听起来很像交换现象。`Tips99` 说，她被认为是死与冰的女神，同时也被称为月之女神。如果让我不负责任地瞎猜一下的话，水指的是婴儿居住的羊水，月亮指的是穗鸟的每月周期或处女期。犬伏对死亡有着执着，她是杀人事件的罪魁祸首，她的自残本性也在 `Tips105` 中被提到过。当月相变换时，月亮也可以暗示出暗影/光明的二元性。
+她出现的最后一幕叫做`Hekate(赫卡特)`。赫卡特是古希腊神话中的女神，常被描绘成三位一体，即三种形式，一种本质。这听起来很像转换现象。
 
-因为三种形式的赫卡特都是女性，这意味着转移中的婴儿 `Ω` 也是女性。这一点被 PSP 版中的年表所证实。有趣的是，犬伏在尾声中威胁着粉红色襁褓中的婴儿的生命，我认为这也代表着此婴儿为女性。或许犬伏能察觉到，这个孩子正是她奇怪经历的罪魁祸首。
+因为三种形式的赫卡特都是女性，这意味着转移中的婴儿 `Ω` 也是女性。这一点被 PSP 版中的年表所证实。有趣的是，犬伏在尾声中，对粉红色襁褓中的婴儿杀气腾腾，我认为这也代表着此婴儿为女性。或许犬伏能察觉到，这个孩子正是导致她奇怪经历的原因。
 
 ### 名字
 
@@ -106,14 +110,16 @@ category:
 
 蔭 – 阴影
 
-凉荫 – 阴冷的阴影, 或“冰冻的人格”
-
 穂 – 麦穗，谷穗
 
 鳥 – 鸟，像是笼中鸟
+
+
+:::tip
+在游戏开发的早期，穗鸟被设定为一个戏份更多的角色，因为她的几个角色立绘在游戏文件中被发现了。在这一版本中，她被称为`Hotori Kusuda`，并计划对应`Trickster`这一荣格原型。她的名字（Torikusuta=Trickster）可能是个双关语。最终，开发者们将`Kusuda`这一名字赋予了悠尼，从而保留了同此荣格原型的联系。
 
 > 穗鸟的未使用立绘
 
 ![穗鸟-立绘](/images/穗鸟-立绘.webp)
 
-在游戏开发的早期，穗鸟被设定为一个戏份更多也更为积极的角色。我们之所以知道这一点，是因为她的几个角色立绘在游戏文件中被发现了。在这一版本中，她被称为`Hotori Kusuda`，并计划对应`Trickster`这一原型。她的名字（Torikusuta=Trickster）可能是个双关语。最终，开发者们将`Kusuda`这一名字赋予了悠尼，从而保留了同此原型的联系。
+:::
