--- a/docs/posts/转移现象/第三人格和第三地点.md
+++ b/docs/posts/转移现象/第三人格和第三地点.md
@@ -35,11 +35,11 @@ category:
 | 07:33 PM |    悟    |  心   |
 | 08:06 PM |    心    |  悟   |
 
-这是心与悟第二天在记事本上所写的时间。似乎每当悟出现在心的身体中时，心就在悟的身体里，所以不存在时间使得第三个人格存在。
+这是心与悟第二天在记事本上所写的时间。似乎每当悟出现在心的身体中时，心就在悟的身体里，所以不存在能让第三人格存在的时间。
 
-但在游戏的结尾，我们发现心在 SPHIA 内得到的时间是错误的。心使用的是房间里的钟，而悟使用的是自己的手表。时钟比手表快了 33 分钟，所以在 SPHIA，心所记录的所有时间都应该向后推迟 33 分钟。
+但在游戏的结尾，我们发现心在 SPHIA 中得到的时间是错误的。心使用的是房间里的钟，而悟使用的是自己的手表。时钟比手表快了 33 分钟，所以在 SPHIA，心所记录的所有时间都应该向后推迟 33 分钟。
 
-为了简单起见，我们只看一组交换，并针对错误进行调整。最终我们获知有一段时间，无论是心还是悟都没有在控制身体，而这就是 `α` 人格出现的时候。
+简单起见，我们只看其中一组交换，并针对错误进行调整。最终，我们得知有一段时间，无论是心还是悟都没有在控制身体，而这就是 `α` 人格出现的时机。
 
 > 1 月 12 日的转移-正确时间
 
@@ -49,7 +49,9 @@ category:
 | 07:33 PM |    悟    |       |
 | 08:06 PM |    心    |  悟   |
 
-不过，这张表格仍然存在一个疑问。如果心和悟既不在避难小屋，也不在 SPHIA，那么他们应该在哪里？在游戏的最后，我们得知了第三地点的存在。因此我们假设，他们的人格届时会在存在于那里。
+不过，这张表格仍然存在一个疑点。如果心和悟的人格此时既不在避难小屋，也不在 SPHIA，那么应该在哪里？
+
+在游戏的结尾，我们得知了第三地点的存在。因此我们假设，他们的人格届时会在存在于那里。
 
 > 1 月 12 日的转移-正确地点
 
@@ -69,7 +71,7 @@ category:
 | 07:33 PM |    悟    |   α   |    心    |
 | 08:06 PM |    心    |  悟   |    α     |
 
-这就是第三人格的秘密。`α` 是个麻烦制造者，所以在它取得控制权之后，悟必须处理其行为所带来的后果。另一方面，心在悟之后进入身体，因此她并没有真正感受到 `α` 人格所带来的影响。
+这就是第三人格的秘密。`α` 在不断创造麻烦，所以在它控制身体之后，悟必须处理它的行为所带来的后果。另一方面，心在悟之后进入身体，因此她并没有真正感受到过 `α` 人格所带来的影响。
 
 <!-- 图片 -->
 
@@ -77,17 +79,17 @@ category:
 
 ![转移现象](/images/trans.webp "转移现象")
 
-最后，让我们总结一下这个问题。在时空转移现象中，一个直径 110 米的圆形地点会在三个不同时间的地点中来回转移。出于某种原因，一些人格在不同的地点之间来回出现，这些就是心，悟和 `α` 的人格。
+最后，让我们总结一下这个问题。在时空转移现象中，一个直径 110 米的圆形地点会在三个不同时间下的地点中来回转移，而一些人格在不同的地点之间来回出现，这些就是心，悟和 `α` 的人格。
 
-我们被引导相信人格是随时间而转移的，就和外圈中的运动一样。然而事实上，发生转移的是地点和时间，而人格却保持固定。内圈才是是真正的转移现象，故事很好地隐藏了这一点。
+游戏误导我们相信人格是随时间而转移的，就和外圈中的运动一样。然而事实上，发生转移的是地点和时间，而人格却始终保持在原地。内圈才是是真正的转移现象，而游戏很好地隐藏了这一点。
 
 ## 第三地点
 
-好吧，我们现在知道时空转移现象是怎么一回事儿了，但我们还是不知道 `α` 人格的身份。也许更多地了解第三地点可以解决这个问题。
+好吧，我们现在知道时空转移现象是怎么回事了，但我们还是不知道 `α` 人格的身份。也许更多地了解第三地点可以解决这个问题。
 
 通过`Apoptosis`一章我们得知，第三地点是一个“平衡点”，存在于避难小屋和 SPHIA 空间和时间之间的中点。如果你画一条从 SPHIA 到避难小屋的直线，那条线的中点将会存在于一个村庄里一个废弃的矿井上。悟在第 7 天看到了这个区域，如果他进入了建筑中，里面戴墨镜的人会说，现在这里是 2011 年 7 月 18 日。
 
-如果我们认为墨镜男的话属实，那么就可以得到以下这张表格：
+如果我们认为他的话属实，那么就可以得到以下这张表格：
 
 | Day |  避难小屋  |  第三地点  |   SPHIA    |
 | :-: | :--------: | :--------: | :--------: |
@@ -99,35 +101,39 @@ category:
 |  6  | 2011.01.16 | 2011.07.17 | 2012.01.16 |
 |  7  | 2011.01.17 | 2011.07.18 | 2012.01.17 |
 
-你可能认为第三地点的第一天是 7 月 11 日，而不是 7 月 12 日。但事实证明，7 月 12 日正好是连续两个 1 月 11 日之间的中间日期。
+你可能会想，第三地点的第一天难道不应该是 7 月 11 日吗？
 
-如果你想知道的话，游戏中有一个未使用的第三地点的背景，删减原因为时间不正确。这一点后来在 PSP 版本中得到了修正，该版本使用了修复后的图像。
+但事实上，7 月 12 日才是连续两个 1 月 11 日之间的中点日期。
 
-> 第三地点的白天与夜晚
+:::tip
+游戏中有一个描绘了第三地点的背景，因为第三地点出场的时间应该是在夜晚而不是白天，它最终在实际游戏中从未出现过。
+
+不过游戏的 PSP 版绘制了一张全新版本的，黑夜下的第三地点，因此在游戏的 PSP 版中，我们得以一窥第三地点的全貌。
 
 ![第三地点-白天](/images/第三地点-白天.webp "第三地点-白天")
 
 ![第三地点-夜晚](/images/第三地点-夜晚.webp "第三地点-夜晚")
+:::
 
-这个区域只在游戏中的另一个地方被提到过：内海曾被带到过这里，并被一直囚禁到了 2011 年 7 月 16 日。这意味着在转移现象的前 5 天，她在那里，而最后 2 天不在。而这两天没有任何人格转换现象，所以去除了内海，人格交流就停止了。
+这个区域只在游戏中的另一个地方被提到过：内海曾被带到过这里，并被一直囚禁到了 2011 年 7 月 16 日。这意味着她只在游戏中的前 5 天存在过。
 
-那么，这是否意味着内海就是`α`？当然不是。
+而在游戏中的后两天，并没有任何人格转换现象发生，这意味着内海的存在是人格转换现象的必然条件之一。
 
-虽然内海当时非常痛苦，但我怀疑她不太可能会像`α`那样无理行事。还有，如果她真的是第三人格，为什么我们在白房子里从来没有从她的身体里看到过任何东西？
+那么，这是否意味着内海就是`α`？当然不是。我们并没有在游戏中得知过任何关于内海视角的描述，这说明我们并没有操控过内海的身体。
 
 ## 红色房间
 
 ![红色房间](/images/红色房间.webp "红色房间")
 
-我们在游戏中曾经多次看到过一个`红色房间`。在这个地方，心和悟感觉很自在，他们不知道自己的身体究竟何去何从。
+我们在游戏中曾多次看到过一个`红色房间`。在这个地方，心和悟都感觉很自在，甚至不知道自己的身体在哪里。
 
-悟描述它像是“炽热的海洋”“原初之海”以及“团聚体”。心描述自己的感觉就像“一个未出生的孩子漂浮在羊水里”。他们都提到了一个稳定的，有节奏的脉搏。
+悟描述它像是“炽热的海洋”“原初之海”以及“团聚体”。心描述自己的感觉就像“一个未出生的孩子漂浮在羊水里”。他们都提到了自己可以感受到“稳定的，有节奏的脉搏”。
 
 如果你在完成了悟篇尾声后重玩心篇，你就会听到物体跳动的声音，听起来很像心跳。
 
 这个谜团的最后一个关键是，从第三地点搬出一个月后，内海生下了一对双胞胎。把所有这些拼凑在一起，我们得知，第三人格不是内海，而是她当时怀着的一对未出生的双胞胎。
 
-提到羊水和感觉像一个未出生的婴儿并不隐晦，它们是对内海子宫的字面描述。它是红色的，因为白光被母亲的肉体过滤了。周围的心跳都来自于内海。它很暖和，因为人体温度在 37°C 或 99°F 左右。
+提到羊水和感觉像一个未出生的婴儿，是对内海子宫的字面描述。“房间”是红色的，这是因为白光被母亲的肉体过滤了。很明显，脉搏都是来自于内海。它很暖和，因为人体温度通常保持在 36°C 左右。
 
 ## 超声波
 
@@ -135,15 +141,15 @@ category:
 
 ![B超](/images/B超.webp "B超")
 
-虽然可能很难辨认，但这张背景图实际上是一张超声波照片，它显示了两个胎儿，并且它在游戏中曾多次出现过：
+虽然可能很难辨认，但这张背景图实际上是两个胎儿的超声波照片，并且它在游戏中曾多次出现过：
 
 1. 首先，它在心篇的第六天开始出现过，且当悟在第五天转移到“温暖的海洋”时又再度出现。
 
-2. 其次，它在 PC 和 PSP 版本的开场影片中也出现过。在原版，它会在最后一秒短暂显示，而在 PSP 版中，它会直接覆盖在心和悟上。
+2. 其次，它在 PC 和 PSP 版本的开场影片中也出现过。在原版，它会在最后一秒中短暂显示，而在 PSP 版中，它会直接覆盖在心和悟上。
 
 3. 最后，在 SPHIA 到小屋的转场视频中也出现了这张图片，而小屋到 SPHIA 的转场视频则没有。这是因为只有他们在从 SPHIA 转移到小屋的过程中需要经过第三地点。
 
-看看我们之前所绘制的转移图解。当某人的人格从 SPHIA 转移到小屋时，他们首先要经过第三地点。与此同时，肯定有一件事要发生，要么播放一次带有胎儿图片的转场视频，要么体验一次在跳动着的`红色房间`的感觉。
+当某人的人格从 SPHIA 转移到小屋时，他们都需要先经过第三地点。与此同时，游戏要么会播放一次带有胎儿图片的转场视频，要么会出现一段在跳动着的`红色房间`的描述。
 
 ## 章节标题
 
@@ -157,21 +163,25 @@ category:
 
 - Miracle Child（奇迹儿童）
 
-除了第一个，这些章节名都有一个非常明确的主题。产前是指“出生前”，“原初”是指“在时间开始时就存在”。Tips99 也提到，“原初之海”是对母亲体内羊水的隐喻。奇迹儿童是一个荣格原型，也被称为“原始儿童”。
+除了第一个标题，这些章节名都有一个非常明确的主题。产前是指“出生前”，“原初”是指“在时间开始时就存在”。Tips99 也提到，“原初之海”是对母亲体内羊水的隐喻。奇迹儿童是一个荣格原型，也被称为“刚出生的儿童”。
 
 ## 总结
 
-`α`是一个控制着成人身体的婴儿，这也解释了为什么他的个性如此易变和不理性。
+`α`是一个控制着成人身体的婴儿，这也解释了为什么他是如此易变和不理性。
 
-它撕毁了心正在看的报纸，吃了她保管的所有食物。悟发现心的画上到处都是涂鸦，第三天，他发现自己在犬伏身边醒来。它又毫不犹豫地喝下了危险的化学物质，又在内海的拥抱中平静下来之前摧毁了客厅。
+它撕毁了心正在看的报纸，如果玩家选择了让心保管食物，它就会全部吃掉它。  
+悟发现心的画上到处都是涂鸦，第三天，他又发现自己在犬伏身边醒来。  
+它又毫不犹豫地喝下了危险的化学物质，又摧毁了客厅，直到自己在内海的拥抱中平静下来。  
 
-当然，它又在欢声笑语中捅了榎本几刀，从而谋杀了他。Tips96（婴夜啼）进一步探讨了这一点。它是这么写的：
+它又在欢声笑语中捅了榎本几刀，导致了他的死亡。
+
+如果你疑惑为什么一个婴儿会做出杀人这种残忍的事情，Tips96（婴夜啼）解答了这个问题。内容如下：
 
 > 也有一些医生的看法是，假设给了婴儿可以自由控制的身体，他们就有可能会变成冷酷的杀人恶魔。<br/>
 > 这是因为他（她）们并没有学习过人类社会的道德伦理，所以可能会依照本能而不断杀戮。<br/>
 > 而且幼儿也是相当残酷的，往往可以毫不犹豫地杀死生物，并且还把这当作是游戏的一部分。<br/>
 
-在悟篇尾声，悟询问悠尼第三人格的身份，悠尼在游戏的镜头之下告诉了他。然后，悟立刻冲到了内海的孩子们的身边，这么想着：
+在悟篇尾声，悟询问悠尼第三人格的身份，在得到解答后，悟立刻冲到了内海的孩子们的身边，这么想着：
 
 > 他们只是在玩耍吧。<br/>
 > 漂浮在温和的羊水中，偶尔被一些微弱的梦幻所唤醒，只是因兴趣所致，才在某一瞬间无邪地玩耍起来。<br/>
@@ -182,7 +192,7 @@ category:
 > 在我心中萦绕不去的情绪是慈爱……还有觉得世事无常……<br/>
 > 接触新生命的瞬间，我领会了生死轮回的道理。
 
-在榎本尚哉的个人 Tips 中，又是这么形容它的：
+在榎本尚哉的个人 Tips 中，又是这么形容他的：
 
 > 虽然因为优希堂悟失去记忆以及胎儿所造成的问题而感到痛苦，但也不能在计划进行到一半时停止，只好默默地旁观一切状况的发展。
 
