搬运文章，目前这个状态已经可以试营业开张了

--- a/docs/guide/游戏流程.md
+++ b/docs/guide/游戏流程.md
@@ -27,7 +27,7 @@ Remember11 并不是一款恋爱游戏，因此它仅有少量的恋爱内容，
 
 以下是您可以看到它们的全部方式：
 
-- 自己打（自行收集每一行带有 TIPS 的台词，可以使用[全 TIPS 攻略](/resource/游戏攻略/全Tips收集攻略)）
+- 自己打（自行收集每一行带有 TIPS 的台词，可以使用[全 TIPS 攻略](/data/游戏攻略/全Tips收集攻略)）
 - 使用全存档文件后在游戏内查看。
   - PC 版
     - [贴吧下载](https://tieba.baidu.com/p/6203540645) [The Cutting Room Floor](https://tcrf.net/Notes:Remember_11:_The_Age_of_Infinity_(Windows))
@@ -39,7 +39,7 @@ Remember11 并不是一款恋爱游戏，因此它仅有少量的恋爱内容，
 请注意，`年表`为 PSP 版游戏的追加内容，PC 版和 PS2 版并不拥有。以下是您可以看到它们的全部方式：
 
 - 自己打（仅限 PSP 版游戏）
-- [在线阅读](/resource/剧情资料/游戏年表)
+- [在线阅读](/data/剧情资料/游戏年表)
 - 使用 [PSP 版 100%存档文件](#阅读全部-tips)后在 PSP 版游戏中查看。
 
 :::tip
