--- a/docs/guide/通关游戏本体.md
+++ b/docs/guide/通关游戏本体.md
@@ -28,7 +28,7 @@
 
 对于希望使用攻略游玩的玩家，我们在此提供三种攻略：
 
-1. [快速通关攻略](/resource/游戏攻略/快速通关攻略.html)
+1. [快速通关攻略](/data/游戏攻略/快速通关攻略.html)
 
 此攻略仅保留真结局和重要坏结局，适合希望快速通关游戏的玩家。
 
@@ -37,11 +37,11 @@
 我个人 **不推荐** 初见玩家使用以下两种攻略，因为这会严重破坏游戏的节奏。但是我个人推荐已通关一周目的玩家使用以下攻略进行Tips和结局列表的收集。
 :::
 
-2. [全Tips收集攻略](/resource/游戏攻略/全Tips收集攻略.html)
+2. [全Tips收集攻略](/data/游戏攻略/全Tips收集攻略.html)
 
 根据此攻略的流程可以解锁游戏的全部Tips（剧情相关），以及遍历游戏的全部好坏结局。
 
-3. [详细解析攻略](/resource/游戏攻略/详细解析攻略)
+3. [详细解析攻略](/data/游戏攻略/详细解析攻略)
 
 此攻略详细分析了游戏中各个数值的走向和结局、收集品的触发条件，如果您在游戏过程中遇到困难，或者想要针对性地收集某种结局，我个人十分推荐您使用此攻略。
 
