--- a/docs/posts/其他细节/内海计划.md
+++ b/docs/posts/其他细节/内海计划.md
@@ -53,4 +53,4 @@
 ## 润一的真实身份
 如果你用内海的出生日期减去润一的出生日期，会得到一个惊人的结果。事实上，根据[广播剧](https://www.bilibili.com/video/BV1gR4y1R7gg)，润一其实并非黄泉木的亲生孩子，而是内海在折磨中被迫怀上的孩子，被黄泉木收养。
 
-目前，并未有已知的信息交代折磨内海的人究竟是谁，闰一的亲生父亲也成为了永远的谜团。
+目前，并未有已知的信息交代折磨内海的人究竟是谁，润一的亲生父亲也成为了永远的谜团。
