--- a/docs/posts/转移现象/7日之中交错的轨迹.md
+++ b/docs/posts/转移现象/7日之中交错的轨迹.md
@@ -18,11 +18,9 @@ category:
 :::warning
 多图预警
 :::
-截至目前，我们已经解答了整个 R11 时空转移现象中所隐藏的谜团。在继续探讨更深层次的内容之前，先让我们用官方设定集中简明的时间表来总结这一部分。
+截至目前，我们已经解答了整个时空转移现象中所隐藏的谜团。在继续探讨更深层次的内容之前，如果您想要梳理一下游戏基础剧情的大致脉络，可以用官方设定集中的时间总结表，以全新的视角来回顾一下整个游戏流程。
 
-如果您对一些细节仍旧难以理清或感到困惑，这就是回顾它的最好时机。
-
-当然，这一节不是必须的，如果您对游戏的表层流程并没有什么疑惑，也可以跳过这一部分。
+当然，如果您认为自己已经对整个游戏流程十分了解，直接[跳到下一部分](/posts/隐藏故事/悟，榎本，以及“我”)也完全可以。
 
 ## 图例
 
