--- a/docs/posts/隐藏故事/优希堂沙也香.md
+++ b/docs/posts/隐藏故事/优希堂沙也香.md
@@ -60,7 +60,7 @@ category:
 
 ### 解释 2-被悟所`杀`
 
-[年表](/resource/剧情资料/游戏年表#日期不明-2)和 premium interview 给出了另一种解释：悟被某种东西控制，使得他亲手“杀死”了妹妹。
+[年表](/data/剧情资料/游戏年表#日期不明-2)和 premium interview 给出了另一种解释：悟被某种东西控制，使得他亲手“杀死”了妹妹。
 
 > 2001 年<br/>
 > 日期不明<br/>
