--- a/docs/posts/隐藏故事/优希堂计划.md
+++ b/docs/posts/隐藏故事/优希堂计划.md
@@ -18,7 +18,7 @@ category:
 
 ## 制定
 
-R11 的[年表](/resource/剧情资料/游戏年表)概述了优希堂计划的制定过程。
+R11 的[年表](/data/剧情资料/游戏年表)概述了优希堂计划的制定过程。
 
 据记载，悟的计划始于 2009 年，当时的阿波墨事件确立了他对 Self 的信仰。他当时的计划是引诱 Self 到他们的世界，并为其杀死沙也香的行为而施展报复。同年，悟向榎本透露了他的设想。
 
