--- a/docs/posts/隐藏故事/悟，榎本，以及“我”.md
+++ b/docs/posts/隐藏故事/悟，榎本，以及“我”.md
@@ -10,7 +10,15 @@ category:
 
 # 悟，榎本，以及“我”
 
-[我们已经看到，内海的双胞胎给我们的角色带来了很多麻烦](/posts/转移现象/阿尔法和欧米茄)，但另一个人，榎本（部分盗版因字库缺失显示为`鼷本`）却给了我们更多麻烦。在悟失去记忆之前，他似乎和悟有某种关系，但谁是真正的榎本？悟又到底是谁？
+我们已经了解，[内海的双胞胎给主角制造了很多麻烦](/posts/转移现象/阿尔法和欧米茄)，但另一位角色，榎本却给了我们更多麻烦。在悟失去记忆之前，他似乎和悟有某种关系，但谁是真正的榎本？悟又到底是谁？
+:::tip
+在游戏的 windows简体中文版 中，如果您游玩的是使用`r11_sc_beta.exe`启动的破解版，那么所有的“`榎`”字都会显示成“`鼷`”。
+
+事实上，这是因为在简体中文版游戏的编码中并不存在“`榎`”字，所以翻译组采用了“先在译文中输入‘`鼷`’，再通过替换字库来显示‘`榎`’字的处理方法。”但是，`r11_sc_beta.exe`修改了游戏字体，从而导致这一处理手法失效了。
+
+这并非`r11_sc_beta.exe`破解程序的唯一问题，由于修改了游戏字体和部分游戏运行逻辑，导致原游戏中的独立人物框只会出现在游戏对话框的最前面，并且在极少数情况下会出现‘文字跑到对话框外面’的情况（虽然这种情况的出现位置和游戏主题莫名其妙地契合）。所以，**如果您有条件，请一定要支持正版。**
+
+:::
 
 ## 隐藏的转换
 
@@ -20,51 +28,51 @@ category:
 
 **戴墨镜的人是真正的优希堂悟。**
 
-如果你通关了 PC/PS2 版的游戏并解锁了所有对话，相册也会澄清这一点。这意味着我们一直控制着的身体是榎本的，不是悟的。
+如果你通关了 PC/PS2 版的游戏并解锁了所有对话，相册也会告知这一点。这意味着我们一直控制着的身体是榎本的，不是悟的。
 
 ![榎本-设计图](/images/榎本-设计图.webp)
 
 ![悟-设计图](/images/悟-设计图.webp)
 
-在《Remember11》最后的一个难忘的场景中，黛这么告诉我们：
+在《Remember11》悟篇尾声的最后一个场景中，黛这么告诉我们：
 
 > 你……不是悟……不是我所认识的……优希堂悟……
 
-她没有误会或者是不愿承认，她认识的悟是那个戴墨镜的人。
+很显然，这是因为她认识的悟是那个戴墨镜的人。
 
-在某些结局中，我们的主人公疯了，被送到了精神病院，那里的工作人员也会叫他“榎本尚哉”。这也不是误会，因为我们正控制着榎本尚哉的身体。
+在某些结局中，我们的主角疯了，被送到了精神病院，那里的工作人员也会叫他“榎本尚哉”，这也是因为，我们实际上正控制着榎本尚哉的身体。
 
-他们是在什么时候交换身体的？好吧，我们知道榎本的身体从钟楼上掉了下来，但在序章中它自称为悟。这意味着他们必须在`2011年7月18日`至`2012年1月11日`去 SPHIA 之前交换过人格。
+他们是在什么时候交换身体的？在游戏开头，榎本的身体从钟楼上掉了下来，但在序章中他自称为悟。这意味着他们必须在`2011年7月18日`即计划失败结局时的第三地点；至`2012年1月11日`SPHIA视角游戏的序章 之间交换过人格。
 
 ## 代词
 
-在进一步研究之前，我们必须先学习一下日语的代词。如果你使用英文版进行游玩，你可能会注意到字母`I`在一些地方的格式很奇怪。我们看到爬上塔楼的人用斜体字 _I_ 说话，而第三地点的黄头发男子则用蓝色的`I`说话。
-
-在日语中，有很多种称呼你自己的方式，可以是正式的、非正式的、男性的或女性的。找出谁使用哪个代词有助于我们识别谁在说话。为此，我们有一张代词表：
+在进一步研究之前，我们必须先学习一下日语的代词。在日语中，有很多种称呼你自己的方式，可以是正式的、非正式的、男性的或女性的。找出谁使用哪个代词有助于我们识别谁在说话。为此，我们有一张代词表：
 
 |    日语    | 罗马音  | 中文 |                      使用者                      |
 | :--------: | :-----: | :--: | :----------------------------------------------: |
 |     俺     |   ore   | 自己 |    摔下塔楼前的优希堂悟，第三地点中的黑衣男子    |
-|    オレ    |   ORE   | 自己 |               摔下塔楼后的优希堂悟               |
+|    オレ    |   ore   | 我 |               摔下塔楼后的优希堂悟               |
 | 私（女性） | atashi  | 人家 |                      冬川心                      |
-|   ワタシ   | WATASHI |  我  |              未知，在心篇第二天出现              |
+|   ワタシ   | watashi |  我  |              未知，在心篇第二天出现              |
 | 私（中性） | watashi |  余  | 悟篇第四天中出现的榎本尚哉，第三地点中的黄衣男子 |
 
-这就是游戏中的角色判断当前身体中是哪种性格在进行控制的方法。你可能想知道黄泉木和内海在你的一句话之后是怎么能分辨出你是谁的，这是因为他们知道心用的是女性的`atashi`（中文翻译为`人家`），而悟用的是男性的`ore`（中文翻译为`我`）。
+这就是游戏中的角色判断当前身体中是哪种人格的方法。你可能想知道黄泉木和内海在你的一句话之后是怎么能分辨出你是谁的，这是因为他们知道心用的是女性的`atashi`（中文翻译为`人家`），而悟用的是男性的`ore`（中文翻译为`我`）。
 
-你可能会注意到，有两个人在使用`ore`作为代词，而他们都自称为`悟`。唯一的区别是，前者是用汉字书写的，这是传统的日语书写方法。后者则是用片假名书写，通常是为外来词和外国名字保留的。在这里，我们将`オレ`表示为`我`，并将其视为一个单独的人格，而`俺`则用`自己`表示。
+你可能会注意到，有两个人在使用`ore`作为代词，而他们都自称为`悟`。唯一的区别是，前者是用汉字书写的，后者则是用片假名。在这里，我们将`オレ`表示为`我`，并将其视为一个单独的人格，而`俺`则用`自己`表示。
 
 `Tips93`中说，我是“我”，但不是“自己”。换句话说，使用“我”的人和使用“自己”的人是不同的。序章中的悟与正篇中的悟是不同的人。
 
-> 注：在由北京娱乐通和台湾光谱所代理的简体/繁体中文版 Remember11（PC）中并未做出此区分，而在民间 PSP 版汉化中，此问题得到了修复，并与本文中的翻译保持一致。
+:::tip
+在由北京娱乐通和台湾光谱所代理的简体/繁体中文 Windows版中并未做出此区分，而 PSP 民间汉化版在区分`オレ`和`俺`方面与本文中的方法保持一致。
+:::
 
-为了避免混淆，我将引用以下称呼：
+为了避免混淆，我将在下文中使用以下称呼：
 
-**真正の优希堂悟:  优希堂/戴眼镜**
+**真正的优希堂悟:  优希堂/戴眼镜**
 
-**真正の榎本尚哉:  榎本/黄头发**
+**真正的榎本尚哉:  榎本/黄头发**
 
-**我们的主角: “悟”/我**
+**游戏主角: “悟”/我**
 
 ## 接管
 
