--- a/docs/resource/游戏资源.md
+++ b/docs/resource/游戏资源.md
@@ -1,7 +1,7 @@
-# 游戏资源
+# 《Remember11》游戏本体资源
 
 :::warning
-无论在什么情况下，原则上我们都只推荐您游玩正版游戏。本站全部资源仅提供给无支付/硬件条件购买正版游戏的玩家。
+无论在什么情况下，原则上我们都只推荐您游玩正版游戏。本站全部资源仅提供给无支付/无硬件条件购买正版游戏的玩家。
 :::
 
 Remember11 目前共发售了五个平台的版本。
