继续修复文章bug

--- a/docs/data/游戏攻略/详细解析攻略.md
+++ b/docs/data/游戏攻略/详细解析攻略.md
@@ -2,7 +2,9 @@
 
 ## 攻略一
 
-> 此攻略作者已不可考，如侵删。
+:::tip
+本文中两篇攻略的作者已不可考，如果您是它的作者，请联系我们署名或删除。
+:::
 
 游戏分为两个篇章：`冬川心篇`与`优希堂悟篇`，游戏一开始默认从`冬川心篇`开始，当达成`冬川心篇`的 GOOD END 结局后，`优希堂悟篇`就会开启
 
@@ -997,8 +999,6 @@
 完成篮球赛=>选项 32
 
 ## 攻略二
-
-> 此攻略作者同样已不可考
 
 ### COCORO 线 CLEAR
 
