--- a/docs/data/剧情资料/广播剧系列.md
+++ b/docs/data/剧情资料/广播剧系列.md
@@ -2,49 +2,54 @@
 
 目前《Remember11》共拥有两个系列的广播剧。
 
-
 :::tip
 感谢以下参与翻译的人员们：
 
-打轴：Nejoe   XX
+打轴：Nejoe XX
 
-翻译/校对：Kona    DANDELION    听风冷冷   久遠寺有珠Alice
+翻译/校对：Kona DANDELION 听风冷冷 久遠寺有珠 Alice
 
-感谢帮助我视频化的 久遠寺有珠Alice
+感谢帮助我视频化的 久遠寺有珠 Alice
 :::
 
-
 ## Drama CD
-Remember11 Drama CD于2004年5月19日发行，即Remember 11 PS2版发行的两个月后。它由5首曲目组成，讲述了角色们对此前经历的回忆。
+
+Remember11 Drama CD 于 2004 年 5 月 19 日发行，即 Remember 11 PS2 版发行的两个月后。它由 5 首曲目组成，讲述了角色们对此前经历的回忆。
 
 ![p1](/images/drama_cd_cover.webp)
 
 ### 配图视频（BiliBili）
-[第0话](https://www.bilibili.com/video/BV19R4y197DH/)
-[第1话](https://www.bilibili.com/video/BV1gR4y1R7gg/)
-[第2话](https://www.bilibili.com/video/BV1T14y177eH/)
-[第4话](https://www.bilibili.com/video/BV1LT411N7Wm/)
+
+- [第 0 话 INTRODUCTION](https://www.bilibili.com/video/BV19R4y197DH/)
+- [第 1 话 Rebirth](https://www.bilibili.com/video/BV1gR4y1R7gg/)
+- [第 2 话 Regret](https://www.bilibili.com/video/BV1T14y177eH/)
+- [第 4 话 Replay](https://www.bilibili.com/video/BV1LT411N7Wm/)
 
 ### 音频&外挂字幕
+
 [百度网盘下载（提取码:WORK）](https://pan.baidu.com/s/1jiK2DcfjBqKzl_iT82fi-g)
 
 ## The Day After Day
-此剧被分为6卷，分散于Prophecy Collection系列中，于2004年4月21日开始发行，也就是PS2版《Remember11》发售的一个月后。
 
-该系列的每一卷都基于一个角色，包含The Day After Day广播剧的一卷，角色曲的各种Remix，基于角色的抒情歌曲以及来自配音演员的特殊信息。
+此剧被分为 6 卷，分散于 Prophecy Collection 系列中，于 2004 年 4 月 21 日开始发行，也就是 PS2 版《Remember11》发售的一个月后。
 
-第1-3集是从黄泉木的视角讲述的，而第4-6集是从内海的视角讲述的。它们涉及游戏序章之前的事件。
+该系列的每一卷都基于一个角色，包含 The Day After Day 广播剧的一卷，角色曲的各种 Remix，基于角色的抒情歌曲以及来自配音演员的特殊信息。
 
->此处仅展示第一卷封面
+第 1-3 集是从黄泉木的视角讲述的，而第 4-6 集是从内海的视角讲述的。它们涉及游戏序章之前的事件。
+
+> 此处仅展示第一卷封面
+
 ![p2](/images/coverKokoro.jpg)
 
 ### 配图视频（BiliBili）
-[第1话](https://www.bilibili.com/video/BV1sg411h7gZ/)
-[第2话](https://www.bilibili.com/video/BV1WV4y1L7Nz/)
-[第3话](https://www.bilibili.com/video/BV1Ae4y1S7ag/)
-[第4话](https://www.bilibili.com/video/BV1kB4y1j7Xu/)
-[第5话](https://www.bilibili.com/video/BV1jg411h7fV/)
-[第6话](https://www.bilibili.com/video/BV16D4y1k7PP/)
+
+- [第 1 话 始与终](https://www.bilibili.com/video/BV1sg411h7gZ/)
+- [第 2 话 在白色的黑暗之中](https://www.bilibili.com/video/BV1WV4y1L7Nz/)
+- [第 3 话 希望](https://www.bilibili.com/video/BV1Ae4y1S7ag/)
+- [第 4 话 永远的少年](https://www.bilibili.com/video/BV1kB4y1j7Xu/)
+- [第 5 话 爱即疯狂](https://www.bilibili.com/video/BV1jg411h7fV/)
+- [第 6 话 终结与开始](https://www.bilibili.com/video/BV16D4y1k7PP/)
 
 ### 音频&外挂字幕
+
 [百度网盘下载（提取码:WORK）](https://pan.baidu.com/s/1dOBBKpdynMYtrQNrkbFGWA)
