--- a/docs/posts/隐藏故事/悟，榎本，以及“我”.md
+++ b/docs/posts/隐藏故事/悟，榎本，以及“我”.md
@@ -56,7 +56,7 @@ category:
 |   ワタシ   | watashi |  我  |              未知，在心篇第二天出现              |
 | 私（中性） | watashi |  余  | 悟篇第四天中出现的榎本尚哉，第三地点中的黄衣男子 |
 
-这就是游戏中的角色判断当前身体中是哪种人格的方法。你可能想知道黄泉木和内海在你的一句话之后是怎么能分辨出你是谁的，这是因为他们知道心用的是女性的`atashi`（中文翻译为`人家`），而悟用的是男性的`ore`（中文翻译为`我`）。
+这就是游戏中的角色判断当前身体中是哪种人格的方法。你可能想知道黄泉木和内海在你的一句话之后是怎么能分辨出你是谁的，这是因为他们知道心用的是女性的`atashi`（中文翻译为`人家`），而悟用的是男性的`俺`（中文翻译为`我`）。
 
 你可能会注意到，有两个人在使用`ore`作为代词，而他们都自称为`悟`。唯一的区别是，前者是用汉字书写的，后者则是用片假名。在这里，我们将`オレ`表示为`我`，并将其视为一个单独的人格，而`俺`则用`自己`表示。
 
@@ -76,7 +76,7 @@ category:
 
 ## 接管
 
-让我们找出`我`究竟是在什么时候接管了黄头发的尸体。这是他从钟楼上掉下来后所作出的描述：
+让我们找出`我`究竟是在什么时候接管了黄头发的身体。这是他从钟楼坠下后所作出的描述：
 
 > 发觉时，自己已飞舞在空中。<br/>
 > 从所有的束缚中得到解放……<br/>
@@ -92,11 +92,13 @@ category:
 > 深深的沉眠终于来临……<br/>
 > 我现在……就在这里……
 
-代词在结尾处变了。就在那一刻，真正的悟离开了黄头发的身体，而“我”的意识则取而代之。
+代词在结尾处发生了改变。就在此时，真正的悟离开了黄头发的身体，而“我”的意识则取而代之。
 
 ## “我”
 
-那么谁是`我`？我们知道，他患有记忆障碍，但他似乎仍然还记得一些事情，但忘记了其他的事情。如果他不是真的悟，那么也许他的记忆被移植了。`我`在第二天假设了这一点，悟在第三地点证实了这一点。`Tips054`（记忆移植）如是说道：
+我们知道，他患有记忆障碍，但他似乎仍然还记得一些事情，但忘记了其他的事情。
+
+如果他其实并不是真正的悟，说明他其实经历过记忆移植。`我`在第二天假设了这一点，悟在第三地点证实了这一点。`Tips054`（记忆移植）记载如下：
 
 > 这个称为 ACE 的记忆本来究竟又是属于谁的呢？<br/>
 > 虽然“我的意识”绝对是属于我自己的没错，但也许我的“我的记忆”是属于某个不是我的人的记忆。<br/>
@@ -120,8 +122,8 @@ category:
 - 为什么大家都在 SPHIA
 - 他同铃的恋情是如何开始，如何结束的。
 
-本质上，`我`只知道我们从心的路线中学到的东西。他只知道我们第一次进行游戏时所透露的信息。那么谁的记忆被移植到“我”的意识中了？
+本质上，`我`只知道我们从心的路线中学到的东西。他只知道我们第一次进行游戏时所透露的信息。
 
-为了回答这个问题，我们必须先搞明白这件事：
+为了进一步分析这个问题，我们必须先了解一个概念：
 
 > SELF 在哪里？
