搬运文章，重制素材

--- a/docs/resource/游戏解包/全文本解包.md
+++ b/docs/resource/游戏解包/全文本解包.md
@@ -2,4 +2,14 @@
 :::tip
 此资源由`Skydark`制作，基于 Windows简体中文版 提取文本。此人我已无法取得联系，如果此次刊登侵犯了您的权益，请联系我进行删除。
 :::
+
+## 打包下载
 [百度网盘下载（提取码：re11）](https://pan.baidu.com/share/init?surl=-0us_iR6tw5IJeGaa1O73w)
+
+## 在线速查
+:::warning
+此页面将包括整个《Remember11》游戏中的全部文本，请您确保自己拥有良好的硬件环境，保持网络通畅。
+:::
+[《Remember11》全文本在线速查表](/resource/游戏解包/全文本速查)
+
+
