chore: 文件格式化

--- a/docs/guide/游戏流程.md
+++ b/docs/guide/游戏流程.md
@@ -6,9 +6,6 @@ Remember11 并不是一款恋爱游戏，因此它仅有少量的恋爱内容，
 
 ## 下载游戏本体
 
-
-
-
 ## 阅读 TIPS 和年表
 
 由于 Remember11 是一款未完的作品，有大量的故事和细节都被放在了年表、TIPS 中。在通关了游戏本体后，您需要通过阅读 TIPS、年表来获得更多信息，才能得知故事的真相。以下为阅读它们的全部步骤：
@@ -30,7 +27,7 @@ Remember11 并不是一款恋爱游戏，因此它仅有少量的恋爱内容，
 - 自己打（自行收集每一行带有 TIPS 的台词，可以使用[全 TIPS 攻略](/data/游戏攻略/全Tips收集攻略)）
 - 使用全存档文件后在游戏内查看。
   - PC 版
-    - [贴吧下载](https://tieba.baidu.com/p/6203540645) [The Cutting Room Floor](https://tcrf.net/Notes:Remember_11:_The_Age_of_Infinity_(Windows))
+    - [贴吧下载](https://tieba.baidu.com/p/6203540645) [The Cutting Room Floor](<https://tcrf.net/Notes:Remember_11:_The_Age_of_Infinity_(Windows)>)
   - PSP 版
     - [百度网盘下载（提取码：re11）](https://pan.baidu.com/s/13yunpbge2mGgDIXLBzG8sg?pwd=re11)
 
