--- a/docs/begin/关于我们.md
+++ b/docs/begin/关于我们.md
@@ -24,4 +24,4 @@
 
 为了更好地服务国内玩家，我们一直坚持使用中国大陆服务器和`remember11.com`的域名。请适当捐助，帮助我们持续为R11玩家提供服务。
 
-![p1](/images/sponsorQrCode.png)
+![p1](/images/sponsorQrCode.webp)
