--- a/docs/data/剧情资料/广播剧系列.md
+++ b/docs/data/剧情资料/广播剧系列.md
@@ -39,7 +39,7 @@ Remember11 Drama CD 于 2004 年 5 月 19 日发行，即 Remember 11 PS2 版发
 
 > 此处仅展示第一卷封面
 
-![p2](/images/coverKokoro.jpg)
+![p2](/images/coverKokoro.webp)
 
 ### 配图视频（BiliBili）
 
