--- a/docs/posts/其他细节/其他琐碎问题.md
+++ b/docs/posts/其他细节/其他琐碎问题.md
@@ -6,11 +6,11 @@
 
 参见年表：
 
-> 日期不明――  
-> 以阿波墨事件为契机，  
-> 悟确信了自己的想法。  
-> 借用犬伏留下的话，  
-> 将“超级意志（或说智慧生命）”  
+> 日期不明――
+> 以阿波墨事件为契机，
+> 悟确信了自己的想法。
+> 借用犬伏留下的话，
+> 将“超级意志（或说智慧生命）”
 > 命名为“Self”。
 
 由此可知，self之名是源于犬伏的那句话，不要倒因为果，没有证据证明犬伏口中的self和R11本体中的self有所关联。
@@ -31,7 +31,7 @@ TB光盘重复着在悟——悠尼——悟——悠尼之间来回循环的过
 
 :::tip
 本站维护者之一`Nejoe`曾经就此问题在微博上询问过打越本人，他对此也讳莫如深。（可能是他也不知道）
-![p1](/images/FineUchi.png)
+![p1](/images/FineUchi.webp)
 :::
 
 ## 谁在结尾把婴儿搬进来的？
