--- a/docs/posts/其他细节/悠尼计划.md
+++ b/docs/posts/其他细节/悠尼计划.md
@@ -14,6 +14,6 @@
 :::warning
 多图预警
 :::
-![p1](/images/UniPlan/捕获.png)
+![p1](/images/UniPlan/捕获.webp)
 
-![p2](/images/UniPlan/捕获2.png)
+![p2](/images/UniPlan/捕获2.webp)
