给文章里引用到的tips增加导航

--- a/docs/posts/转移现象/犬伏景子和凉荫穗鸟.md
+++ b/docs/posts/转移现象/犬伏景子和凉荫穗鸟.md
@@ -50,7 +50,7 @@ category:
 
 ## TIPS
 
-`Tips105` 和 `Tips108` 证实了这一交换存在，它提到，犬伏的身体在心篇中受穗鸟的人格控制，而在悟篇中受犬伏控制。
+[Tips105-犬伏景子](/data/剧情资料/全Tips一览.md#_105-犬伏景子)和[Tips108-凉荫穗鸟](/data/剧情资料/全Tips一览.md#_108-凉荫穗鸟)证实了这一交换存在，它提到，犬伏的身体在心篇中受穗鸟的人格控制，而在悟篇中受犬伏控制。
 
 > TIPS 105 – 犬伏景子<br/>
 > 出现在冬川心面前时的人格是凉荫穗鸟本人。<br/>
@@ -62,11 +62,10 @@ category:
 > 这是针对 2011 年的设定。<br/>
 > 主要在 SPHIA 登场。<br/>
 > 但是，在剧中登场时的肉体都是犬伏景子。<br/>
-> 自己原本的肉体倒在雪原之中。
-
+> 自己原本的肉体倒在雪原之中。<br/>
 > （出现在优希堂悟面前的“穗鸟”是犬伏景子）
 
-`Tips108` 还告诉我们，穗鸟之所以无法说话，是因为她患有急性失语症。换句话说，飞机失事造成的精神创伤使她丧失了说话的能力。考虑到在转移过程中记忆和人格的转移，精神创伤也会一并转移也并不奇怪。
+[Tips108-凉荫穗鸟](/data/剧情资料/全Tips一览.md#_108-凉荫穗鸟)还告诉我们，穗鸟之所以无法说话，是因为她患有急性失语症。换句话说，飞机失事造成的精神创伤使她丧失了说话的能力。考虑到在转移过程中记忆和人格的转移，精神创伤也会一并转移也并不奇怪。
 
 ## 发狂
 
@@ -90,7 +89,7 @@ category:
 
 如果她真的患有 DID，她可能已经习惯了自己的其他人格做一些奇怪的事情，并下意识地顺着它们。
 
-[此外，在游戏的广播剧中提出了一种假说：](https://www.bilibili.com/video/BV16D4y1k7PP)她可能并非是DID患者，精神分析是伪造的，杀人事件也是她自己亲手造成的，一切都只是为了好玩。她的个人简介 `Tips105` 中也记载，她喜欢“吸引别人的注意”“玩弄身边的人”；并且“是团体的负担，麻烦制造者”。整个游戏都印证了这一点。
+[此外，在游戏的广播剧中提出了一种假说](https://www.bilibili.com/video/BV16D4y1k7PP)：她可能并非是 DID 患者，精神分析是伪造的，杀人事件也是她自己亲手造成的，一切都只是为了好玩。她的个人简介[Tips105-犬伏景子](/data/剧情资料/全Tips一览.md#_105-犬伏景子)中也记载，她喜欢“吸引别人的注意”“玩弄身边的人”；并且“是团体的负担，麻烦制造者”。整个游戏都印证了这一点。
 
 ## 象征
 
@@ -113,7 +112,6 @@ category:
 穂 – 麦穗，谷穗
 
 鳥 – 鸟，像是笼中鸟
-
 
 :::tip
 在游戏开发的早期，穗鸟被设定为一个戏份更多的角色，因为她的几个角色立绘在游戏文件中被发现了。在这一版本中，她被称为`Hotori Kusuda`，并计划对应`Trickster`这一荣格原型。她的名字（Torikusuta=Trickster）可能是个双关语。最终，开发者们将`Kusuda`这一名字赋予了悠尼，从而保留了同此荣格原型的联系。
