--- a/docs/posts/转移现象/第三人格和第三地点.md
+++ b/docs/posts/转移现象/第三人格和第三地点.md
@@ -163,7 +163,7 @@ category:
 
 - Miracle Child（奇迹儿童）
 
-除了第一个标题，这些章节名都有一个非常明确的主题。产前是指“出生前”，“原初”是指“在时间开始时就存在”。Tips99 也提到，“原初之海”是对母亲体内羊水的隐喻。奇迹儿童是一个荣格原型，也被称为“刚出生的儿童”。
+除了第一个标题，这些章节名都有一个非常明确的主题。产前是指“出生前”，“原初”是指“在时间开始时就存在”。[Tips99-章节标题中隐含的寓意](/data/剧情资料/全Tips一览.md#_99-章节标题中隐含的寓意)也提到，“原初之海”是对母亲体内羊水的隐喻。奇迹儿童是一个荣格原型，也被称为“刚出生的儿童”。
 
 ## 总结
 
@@ -171,11 +171,11 @@ category:
 
 它撕毁了心正在看的报纸，如果玩家选择了让心保管食物，它就会全部吃掉它。  
 悟发现心的画上到处都是涂鸦，第三天，他又发现自己在犬伏身边醒来。  
-它又毫不犹豫地喝下了危险的化学物质，又摧毁了客厅，直到自己在内海的拥抱中平静下来。  
+它又毫不犹豫地喝下了危险的化学物质，又摧毁了客厅，直到自己在内海的拥抱中平静下来。
 
 它又在欢声笑语中捅了榎本几刀，导致了他的死亡。
 
-如果你疑惑为什么一个婴儿会做出杀人这种残忍的事情，Tips96（婴夜啼）解答了这个问题。内容如下：
+如果你疑惑为什么一个婴儿会做出杀人这种残忍的事情，[Tips96-婴夜啼](/data/剧情资料/全Tips一览.md#_96-婴夜啼)解答了这个问题。内容如下：
 
 > 也有一些医生的看法是，假设给了婴儿可以自由控制的身体，他们就有可能会变成冷酷的杀人恶魔。<br/>
 > 这是因为他（她）们并没有学习过人类社会的道德伦理，所以可能会依照本能而不断杀戮。<br/>
@@ -192,7 +192,7 @@ category:
 > 在我心中萦绕不去的情绪是慈爱……还有觉得世事无常……<br/>
 > 接触新生命的瞬间，我领会了生死轮回的道理。
 
-在榎本尚哉的个人 Tips 中，又是这么形容他的：
+在[Tips107-榎本尚哉](/data/剧情资料/全Tips一览.md#_107-榎本尚哉) 的个人资料中，又是这么形容他的：
 
 > 虽然因为优希堂悟失去记忆以及胎儿所造成的问题而感到痛苦，但也不能在计划进行到一半时停止，只好默默地旁观一切状况的发展。
 
