--- a/docs/posts/隐藏故事/优希堂沙也香.md
+++ b/docs/posts/隐藏故事/优希堂沙也香.md
@@ -20,7 +20,7 @@ category:
 
 至此之后，她就再也没有在游戏流程中出现过了。
 
-但是，她的详细资料在游戏的最后一个 Tips——`Tips110`里得到了详细的介绍。
+但是，她的详细资料在游戏的最后一个 Tips——[Tips110-优希堂沙也香](/data/剧情资料/全Tips一览.md#_110-优希堂沙也香)里得到了详细的介绍。
 
 > 设定：优希堂悟的妹妹，异卵双胞胎<br/>
 > 里设定：2012 年的 11 年前死亡。<br/>
