--- a/docs/posts/隐藏故事/悟，榎本，以及“我”.md
+++ b/docs/posts/隐藏故事/悟，榎本，以及“我”.md
@@ -12,7 +12,7 @@ category:
 
 我们已经了解，[内海的双胞胎给主角制造了很多麻烦](/posts/转移现象/阿尔法和欧米茄)，但另一位角色，榎本却给了我们更多麻烦。在悟失去记忆之前，他似乎和悟有某种关系，但谁是真正的榎本？悟又到底是谁？
 :::tip
-在游戏的 windows简体中文版 中，如果您游玩的是使用`r11_sc_beta.exe`启动的破解版，那么所有的“`榎`”字都会显示成“`鼷`”。
+在游戏的 windows 简体中文版 中，如果您游玩的是使用`r11_sc_beta.exe`启动的破解版，那么所有的“`榎`”字都会显示成“`鼷`”。
 
 事实上，这是因为在简体中文版游戏的编码中并不存在“`榎`”字，所以翻译组采用了“先在译文中输入‘`鼷`’，再通过替换字库来显示‘`榎`’字的处理方法。”但是，`r11_sc_beta.exe`修改了游戏字体，从而导致这一处理手法失效了。
 
@@ -42,7 +42,7 @@ category:
 
 在某些结局中，我们的主角疯了，被送到了精神病院，那里的工作人员也会叫他“榎本尚哉”，这也是因为，我们实际上正控制着榎本尚哉的身体。
 
-他们是在什么时候交换身体的？在游戏开头，榎本的身体从钟楼上掉了下来，但在序章中他自称为悟。这意味着他们必须在`2011年7月18日`即计划失败结局时的第三地点；至`2012年1月11日`SPHIA视角游戏的序章 之间交换过人格。
+他们是在什么时候交换身体的？在游戏开头，榎本的身体从钟楼上掉了下来，但在序章中他自称为悟。这意味着他们必须在`2011年7月18日`即计划失败结局时的第三地点；至`2012年1月11日`SPHIA 视角游戏的序章 之间交换过人格。
 
 ## 代词
 
@@ -51,7 +51,7 @@ category:
 |    日语    | 罗马音  | 中文 |                      使用者                      |
 | :--------: | :-----: | :--: | :----------------------------------------------: |
 |     俺     |   ore   | 自己 |    摔下塔楼前的优希堂悟，第三地点中的黑衣男子    |
-|    オレ    |   ore   | 我 |               摔下塔楼后的优希堂悟               |
+|    オレ    |   ore   |  我  |               摔下塔楼后的优希堂悟               |
 | 私（女性） | atashi  | 人家 |                      冬川心                      |
 |   ワタシ   | watashi |  我  |              未知，在心篇第二天出现              |
 | 私（中性） | watashi |  余  | 悟篇第四天中出现的榎本尚哉，第三地点中的黄衣男子 |
@@ -60,10 +60,10 @@ category:
 
 你可能会注意到，有两个人在使用`ore`作为代词，而他们都自称为`悟`。唯一的区别是，前者是用汉字书写的，后者则是用片假名。在这里，我们将`オレ`表示为`我`，并将其视为一个单独的人格，而`俺`则用`自己`表示。
 
-`Tips93`中说，我是“我”，但不是“自己”。换句话说，使用“我”的人和使用“自己”的人是不同的。序章中的悟与正篇中的悟是不同的人。
+[Tips93-我](/data/剧情资料/全Tips一览.md#_93-我)中说，我是“我”，但不是“自己”。换句话说，使用“我”的人和使用“自己”的人是不同的。序章中的悟与正篇中的悟是不同的人。
 
 :::tip
-在由北京娱乐通和台湾光谱所代理的简体/繁体中文 Windows版中并未做出此区分，而 PSP 民间汉化版在区分`オレ`和`俺`方面与本文中的方法保持一致。
+在由北京娱乐通和台湾光谱所代理的简体/繁体中文 Windows 版中并未做出此区分，而 PSP 民间汉化版在区分`オレ`和`俺`方面与本文中的方法保持一致。
 :::
 
 为了避免混淆，我将在下文中使用以下称呼：
@@ -98,7 +98,7 @@ category:
 
 我们知道，他患有记忆障碍，但他似乎仍然还记得一些事情，但忘记了其他的事情。
 
-如果他其实并不是真正的悟，说明他其实经历过记忆移植。`我`在第二天假设了这一点，悟在第三地点证实了这一点。`Tips054`（记忆移植）记载如下：
+如果他其实并不是真正的悟，说明他其实经历过记忆移植。`我`在第二天假设了这一点，悟在第三地点证实了这一点。[Tips54-记忆移植](/data/剧情资料/全Tips一览.md#_54-记忆移植)记载如下：
 
 > 这个称为 ACE 的记忆本来究竟又是属于谁的呢？<br/>
 > 虽然“我的意识”绝对是属于我自己的没错，但也许我的“我的记忆”是属于某个不是我的人的记忆。<br/>
