--- a/docs/begin/概述.md
+++ b/docs/begin/概述.md
@@ -1,4 +1,11 @@
 # 概述
+:::tip
+
+Unfortunately, this website currently only focuses on serving Chinese-speaking players. 
+
+If you can speak English, you can try [Remember11 EXPLAINED](https://adayem.wordpress.com/), which has some of the same content and the same purpose.
+
+:::
 
 《Remember11》 是一部发售于 2004 年的文字冒险游戏，为“infinity”系列的第三作，同时也是在圈内大名鼎鼎的《Ever17》的直系续作。
 
