增加攻略页面的警告

--- a/docs/data/游戏攻略/详细解析攻略.md
+++ b/docs/data/游戏攻略/详细解析攻略.md
@@ -1,10 +1,16 @@
 # 详细解析攻略
 
-## 攻略一
-
 :::tip
 本文中两篇攻略的作者已不可考，如果您是它的作者，请联系我们署名或删除。
 :::
+
+:::warning
+我个人 **不推荐** 初见玩家使用此攻略，因为这会严重破坏游戏的节奏。但是我个人推荐已通关一周目的玩家使用以下攻略进行Tips和结局列表的收集。
+
+对于我们建议的游戏通关方式，可以参考 [通关游戏本体(/guide/通关游戏本体) 页面。 
+:::
+
+## 攻略一
 
 游戏分为两个篇章：`冬川心篇`与`优希堂悟篇`，游戏一开始默认从`冬川心篇`开始，当达成`冬川心篇`的 GOOD END 结局后，`优希堂悟篇`就会开启
 
