在git里面拉出来的话，站长生涯就结束了吧

--- a/docs/data/游戏攻略/详细解析攻略.md
+++ b/docs/data/游戏攻略/详细解析攻略.md
@@ -7,7 +7,7 @@
 :::warning
 我个人 **不推荐** 初见玩家使用此攻略，因为这会严重破坏游戏的节奏。但是我个人推荐已通关一周目的玩家使用以下攻略进行Tips和结局列表的收集。
 
-对于我们建议的游戏通关方式，可以参考 [通关游戏本体(/guide/通关游戏本体) 页面。 
+对于我们建议的游戏通关方式，可以参考 [通关游戏本体](/guide/通关游戏本体) 页面。 
 :::
 
 ## 攻略一
