--- a/docs/posts/概述.md
+++ b/docs/posts/概述.md
@@ -4,7 +4,7 @@
 
 :::warning
 
-在继续阅读之前，请您先确保自己已经完成了以下事项：
+以下内容包含游戏的全部剧透，在继续阅读之前，请您先确保自己已经完成了以下事项：
 
 1. 完成了全部重要结局结局，再次强调一下，它们是：
 
@@ -14,5 +14,3 @@
 
 2. 阅读了游戏的全部Tips和年表。[您可以在这里得到阅读它们的方式](/guide/阅读Tips和年表.html)。
    :::
-
-如果要开始阅读，请从文章 [第三人格和第三地点](/posts/转移现象/第三人格和第三地点) 开始，推荐按顺序依次阅读。
