给优希堂加上黑条条

--- a/docs/guide/通关游戏本体.md
+++ b/docs/guide/通关游戏本体.md
@@ -14,9 +14,9 @@
 
 - END1 心篇好结局
 - END19 悟篇好结局
-- END31 计划失败结局
+- END31 !!优希堂计划失败结局!!
 
-我个人推荐在悟篇好结局后通关计划失败结局，以获得最佳的叙事效果。
+我个人推荐在悟篇好结局后通关!!优希堂计划失败结局!!，以获得最佳的叙事效果。
 
 其余结局对理解游戏剧情并无直接影响，可视情况进行收集。
 :::warning
