--- a/docs/posts/概述.md
+++ b/docs/posts/概述.md
@@ -4,13 +4,13 @@
 
 :::warning
 
-以下内容包含游戏的全部剧透，在继续阅读之前，请您先确保自己已经完成了以下事项：
+以下内容包含游戏的 **全部剧透** ，在继续阅读之前，请您先确保自己已经完成了以下事项：
 
-1. 完成了全部重要结局结局，再次强调一下，它们是：
+1. 完成了 **全部重要结局** ，再次强调一下，它们是：
 
 - END1 心篇好结局
 - END19 悟篇好结局
-- END31 计划失败结局
+- END31 !!优希堂计划失败结局!!
 
 2. 阅读了游戏的全部Tips和年表。[您可以在这里得到阅读它们的方式](/guide/阅读Tips和年表.html)。
    :::
