--- a/docs/data/剧情资料/广播剧系列.md
+++ b/docs/data/剧情资料/广播剧系列.md
@@ -14,7 +14,7 @@
 
 ## Drama CD
 
-Remember11 Drama CD 于 2004 年 5 月 19 日发行，即 Remember 11 PS2 版发行的两个月后。它由 5 首曲目组成，讲述了角色们对此前经历的回忆。
+《Remember11 Drama CD》 于 2004 年 5 月 19 日发行，也就是 PS2 版 《Remember11》 发行的两个月后。它由 5 首曲目组成，讲述了角色们对此前经历的回忆。
 
 ![p1](/images/drama_cd_cover.webp)
 
@@ -31,9 +31,9 @@ Remember11 Drama CD 于 2004 年 5 月 19 日发行，即 Remember 11 PS2 版发
 
 ## The Day After Day
 
-此剧被分为 6 卷，分散于 Prophecy Collection 系列中，于 2004 年 4 月 21 日开始发行，也就是 PS2 版《Remember11》发售的一个月后。
+此剧被分为 6 卷，分散于 《Prophecy Collection》 系列CD中，于 2004 年 4 月 21 日开始发行，也就是 PS2 版 《Remember11》 发售的一个月后。
 
-该系列的每一卷都基于一个角色，包含 The Day After Day 广播剧的一卷，角色曲的各种 Remix，基于角色的抒情歌曲以及来自配音演员的特殊信息。
+该系列的每一卷都基于一个角色，包含 《The Day After Day》 广播剧的一卷，角色曲的各种 Remix，基于角色的抒情歌曲以及来自配音演员的特殊信息。
 
 第 1-3 集是从黄泉木的视角讲述的，而第 4-6 集是从内海的视角讲述的。它们涉及游戏序章之前的事件。
 
