--- a/docs/begin/关于我们.md
+++ b/docs/begin/关于我们.md
@@ -1,8 +1,54 @@
+<script setup lang="ts">
+import {
+  VPTeamMembers
+} from 'vitepress/theme'
+
+const members = [
+  {
+    avatar: "https://www.github.com/daaiyinhujun.png",
+    name: "傅建国FreeUrMind53",
+    title: "站长",
+    desc: "本站站长，负责网站内容的更新和维护，部分文章作者。",
+    links: [
+      { icon: "github", link: "https://github.com/daaiyinhujun" },
+      { icon: "bilibili", link: "https://space.bilibili.com/3493129221049150" },
+    ],
+  },
+  {
+    avatar: "https://www.github.com/MCSeekeri.png",
+    name: "MCSeekeri",
+    title: "副站长",
+    desc: "提供服务器托管和技术支持，负责基于 VitePress 的新版中文站的开发和维护。",
+    links: [{ icon: "github", link: "https://github.com/MCSeekeri" }],
+  },
+  {
+    avatar: "https://www.github.com/Nejoe.png",
+    name: "Nejoe",
+    title: "万恶之源",
+    desc: "曾基于 VuePress 制作中文站，成为了整个新版中文站项目的基础。现版本负责一些乱七八糟的更新。",
+    links: [
+      { icon: "github", link: "https://www.github.com/Nejoe" },
+      { icon: "bilibili", link: "https://space.bilibili.com/1716803" },
+    ],
+  },
+  {
+    avatar: "https://www.github.com/2601677867.png",
+    name: "冬寂WinterMuted",
+    title: "（前）副站长",
+    desc: "在 2020~2024 年为中文站提供技术支持和服务器托管，没有他就没有中文站。",
+    links: [
+      { icon: "github", link: "https://www.github.com/2601677867"},
+      { icon: "bilibili", link: "https://space.bilibili.com/319404588" }
+    ],
+  },
+];
+</script>
+
 # 关于我们
 
 ## 版权归属
 
-本网站大部分解析文章由[Arysm](https://adayem.wordpress.com/)和[FreeUrMind64](https://space.bilibili.com/3493129221049150)共同创作，转载请注明作者。
+本网站大部分解析文章由[Arysm](https://adayem.wordpress.com/)和[FreeUrMind64](https://space.bilibili.com/3493129221049150)共同创作，部分内容授权改编自[Remember11 EXPLAINED](https://adayem.wordpress.com/)，转载请注明作者。
 
 部分文章转载自个人独立作者，此部分版权由各个作者所有。
 
@@ -10,18 +56,20 @@
 
 ## 维护团队
 
-本网站内容由[FreeUrMind64](https://space.bilibili.com/3493129221049150)维护，部分内容授权改编自[Remember11 EXPLAINED](https://adayem.wordpress.com/)。
+<!-- 本网站内容由[FreeUrMind64](https://space.bilibili.com/3493129221049150)维护，部分内容授权改编自[Remember11 EXPLAINED](https://adayem.wordpress.com/)。
 
 新版中文站基于[VitePress](https://vitepress.dev/zh/)，由[MCSeekeri](https://github.com/MCSeekeri)托管服务器，提供技术支持。
 
 感谢[Nejoe](https://space.bilibili.com/1716803)基于[VuePress](https://vuepress.vuejs.org/zh/)制作的重构版中文站，成为了整个新版中文站项目的基础。
 
-感谢[冬寂WinterMuted](https://space.bilibili.com/319404588)在2020~2024年为中文站提供技术支持和服务器托管，没有他就没有中文站。
+感谢[冬寂 WinterMuted](https://space.bilibili.com/319404588)在 2020~2024 年为中文站提供技术支持和服务器托管，没有他就没有中文站。 -->
+
+<VPTeamMembers :members size="small" />
 
 ## 捐助我们
 
 本站为个人爱好项目，不会也不能强制要求收取任何费用，更不会出现任何广告。
 
-为了更好地服务国内玩家，我们一直坚持使用中国大陆服务器和`remember11.com`的域名。请适当捐助，帮助我们持续为R11玩家提供服务。
+为了更好地服务国内玩家，我们一直坚持使用中国大陆服务器和`remember11.com`的域名。请适当捐助，帮助我们持续为 R11 玩家提供服务。
 
 ![p1](/images/sponsorQrCode.webp)
