docs: 更新团队简介。

--- a/docs/begin/关于我们.md
+++ b/docs/begin/关于我们.md
@@ -35,7 +35,7 @@ const members = [
     avatar: "https://www.github.com/2601677867.png",
     name: "冬寂WinterMuted",
     title: "（前）副站长",
-    desc: "在 2020~2024 年为中文站提供技术支持和服务器托管，没有他就没有中文站。",
+    desc: "在 2020~2024 年为中文站提供技术支持和服务器托管。虽然他尚未参与现版本的建设，也请铭记他的贡献。",
     links: [
       { icon: "github", link: "https://www.github.com/2601677867"},
       { icon: "bilibili", link: "https://space.bilibili.com/319404588" }
